--- a/client/public/index.html
+++ b/client/public/index.html
@@ -26,7 +26,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.0.0/journal/bootstrap.min.css"
     />
-    <title>React App</title>
+    <title>React Health App</title>
   </head>
   <body>
     <noscript>
